--- a/public/game.html
+++ b/public/game.html
@@ -676,7 +676,7 @@
 <!-- below we place the needed scripts to establish Webscoket, max hits etc...  -->
 <script src="javascripts/FullScreen.js" type="text/javascript"></script>
 <script type="text/javascript" src="javascripts/startbutton.js" id="startbuttonscript"></script>
-<script type="text/javascript" src="javascripts/timer.js" ></script>
+<!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
 <script type="text/javascript" src="javascripts/ShipPlacement.js" id="shipplacement"></script>
 
 </body>
