fixed some bugs and added place-ships html page for palcing ships before game is started

--- a/public/game.html
+++ b/public/game.html
@@ -664,6 +664,9 @@
 <!-- below we place the needed scripts to establish Webscoket, max hits etc...  -->
 <script src="javascripts/FullScreen.js" type="text/javascript"></script>
 <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
+<script type="text/javascript" src="javascripts/messages.js"></script>
+<script type="text/javascript" src="javascripts/ShipPlacement.js"></script>
+<script type="text/javascript" src="javascripts/initWebsocket.js"></script>
 
 </body>
 
