fixed shipplacement bugs

--- a/public/shipplacement.html
+++ b/public/shipplacement.html
@@ -27,7 +27,7 @@
 		</header>
 		
 		<div class="notifications">
-				<span class="marquee" id="notification">Place the ships on the grid</span>
+				<span class="marquee" id="notification">Place the <b>Aircraft Carrier</b> on the grid</span>
 		</div>
 		
 		<div class="battlefield">
@@ -41,7 +41,7 @@
 						<button id="carrier">Aircraft Carrier = 5 Tiles</button></br>
 						<!-- <button id="rotate-button" data-direction="0">Rotate Ship</button> -->
 						<form action="/play" method="get">
-							<button id="startgamebutton" type="submit">Start Game</button>
+							<button id="startgamebutton" type="submit" disabled>Start Game</button>
 						</form>
 			</div>
 			
