todo: init websocket in waiting page to check whether the game can begin for transition from waiting page to play page added loading gif in waiting page

--- a/public/shipplacement.html
+++ b/public/shipplacement.html
@@ -40,7 +40,7 @@
 						<button id="battleship">Battleship = 4 Tiles</button></br>
 						<button id="carrier">Aircraft Carrier = 5 Tiles</button></br>
 						<!-- <button id="rotate-button" data-direction="0">Rotate Ship</button> -->
-						<form action="/play" method="get">
+						<form action="/waiting-page" method="get">
 							<button id="startgamebutton" type="submit" disabled>Start Game</button>
 						</form>
 			</div>
