--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <title>Battleship V: Battle royale edition</title>
         <link rel = "stylesheet"type = "text/css" href = "stylesheets/contact.css" />   
         <link rel="shortcut icon" type="image/png" href="images/favi.png"/>
+
+        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     </head>
 
 
