--- a/public/game.html
+++ b/public/game.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta http-equiv="content-type" content="text/xml; charset=utf-8" />
-    
+<head lang="en">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 	<title>Battleship V: Battle Royale Edition</title>   
 	<link rel = "stylesheet"type = "text/css" href = "stylesheets/game.css" />   
 	<script type="text/javascript" src="javascripts/jquery.js"> </script>
 	<link rel="shortcut icon" type="image/png" href="images/favi.png"/>
+
+	<!-- TODO: make styling only using bootstrap -->
+	<!-- <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script> -->
 
 </head>
     
