--- a/public/game.html
+++ b/public/game.html
@@ -671,7 +671,7 @@
 <script src="javascripts/FullScreen.js" type="text/javascript"></script>
 <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
 <script type="text/javascript" src="javascripts/messages.js"></script>
-<script type="text/javascript" src="javascripts/ShipPlacement.js"></script>
+<!-- <script type="text/javascript" src="javascripts/ShipPlacement.js"></script> -->
 <script type="text/javascript" src="javascripts/initWebsocket.js"></script>
 
 </body>
