disabled the selection of coordinates on the grid

--- a/public/game.html
+++ b/public/game.html
@@ -34,9 +34,9 @@
 				
 		</header>
 		
-		<div class="notifications">
+		<!-- <div class="notifications">
 				<span class="marquee" id="notification">No Notifications</span>
-		</div>
+		</div> -->
 		
 		<div class="battlefield">
 			<div class="Scoreboard">
