replace game.html with game.ejs, fixed bug when 2 players connect, added a lot of comments and reorganized code

--- a/public/oldGamePage.html
+++ b/public/oldGamePage.html
@@ -41,11 +41,11 @@
 		<div class="battlefield">
 			<div class="Scoreboard">
 				<div id="ScoreSelf">
-					<h4>Player A Hits:</h4>
+					<h4>Your Hits:</h4>
 					<h4 id="hitsself">0</h4>
 				</div>
 				<div id="ScoreRival">
-					<h4>Player B Hits:</h4>
+					<h4>Enemy's Hits:</h4>
 					<h4 id="hitsrival">0</h4>
 				</div>
 			</div>
