--- a/public/waitingpage.html
+++ b/public/waitingpage.html
@@ -46,6 +46,7 @@
     </footer>
 
     <script src="javascripts/FullScreen.js" type="text/javascript"></script>
+    <script type="text/javascript" src="javascripts/shared.js"></script>
     <script type="text/javascript" src="javascripts/messages.js"></script>
     <script src="javascripts/initWebsocket.js" type="text/javascript"></script>
 
