--- a/public/contact.html
+++ b/public/contact.html
@@ -17,25 +17,42 @@
     <body>
         <main class="main">
             <div class="body">
-                    <nav id="nav">
-                        <h2><image src="images/logo.png" id="splash_logo">Battleship V</image><a href="/" id="r">Return</a></h2>
-                    </nav>
+                <header class="header container-fluid">
+                    <div class="row justify-content-between">
+                        <div class="col-4">
+                            <image src="images/logo.png" id="splash_logo">
+                                <a href="/" id="homepage">Battleship V</a>
+                            </image> 
+                        </div>
+                    </div>                        
+                </header>
 
                 <div id="content">
-                <div id="contact-middle">
                         <h1>Welcome to the How-To-Play Guide Of The Game</h1>
-                        <h2>Here is how the game is played:</h2>
-                        <h4>1. Click play button</h4>
-                        <h4>2.
-                        <h4><a href="images/explosion.gif">Link to send us money</a></h4>
-                </div>
+                        <h2 id="subtitle">Here is how the game is played:</h2>
+                        <div id="guide">
+                            <h4>1. Click play button</h4>
+                            <h4>2. Position the ships through either randomizing their location or rotating the then current positioned ships</h4>
+                            <h4>3. Start a game match</h4>
+                            <h4>4. Wait until an opponent connects</h4>
+                            <h4>5. ....</h4>
+                            <h4>6. Profit</h4>
+                        </div>
+
+                        <div id="sponsor">
+                            <h4>Consider supporting us through Paypal: <a href="https://www.paypal.me/kef1n" id="homepage">Link to send us money</a></h4>
+                        </div>
                 </div>         
             </div>
         </main>
         <footer id="footer">
-                <div id="l">&copy&nbspCopyright 2018  | All rights reserved. </div>
-                <div id="m">Support us on patreon!</div>
-                <div id="r">... we need the money...</div>
+            <div class="container-fluid">
+                <div class="row justify-content-around">
+                  <div class="col-3"> &copy&nbspCopyright 2018-2020  | All rights reserved. </div>
+                  <div class="col-3"><a href="https://www.paypal.me/kef1n" id="supportlink">Support us on patreon!</a> </div>
+                  <div class="col-3"> ... we need the money... </div>
+                </div>
+              </div>
         </footer>
     </body>
 </html>
